--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
   <div id="app"></div>
+  <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
