--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         document.documentElement.classList.toggle('dark', true)
     })()
   </script> -->
+
+  <script>
+    (function () {
+      localStorage.setItem('vueuse-color-scheme', 'dark')
+      document.documentElement.classList.toggle('dark', true)
+    })()
+</script>
 </head>
 <body>
   <div id="app"></div>
